# aura-coin-scaffold

./: .gitignore  CONTRACT_DEMO.md  Cargo.toml  deploy-owner.sh  deploy.sh
aura_coin_demo/: Cargo.toml
contracts/fungible/: Cargo.toml
contracts/fungible/src/: contract.rs  lib.rs  test.rs
contracts/fungible/test_snapshots/test/: initial_state.1.json  test_approve_and_transfer_from.1.json  test_burn.1.json  test_mint.1.json  test_ownership.1.json  test_pause_unpause.1.json  test_total_supply.1.json  test_transfer.1.json
src/: main.rs
