[package]
name = "fungible-contract"
edition.workspace = true
license.workspace = true
publish = false
version.workspace = true

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
stellar-default-impl-macro = { workspace = true }
stellar-fungible = { workspace = true }
stellar-non-fungible = { workspace = true }
stellar-pausable = { workspace = true }
stellar-pausable-macros = { workspace = true }
stellar-upgradeable = { workspace = true }
stellar-upgradeable-macros = { workspace = true }
stellar-access-control = { workspace = true }
stellar-access-control-macros = { workspace = true }
stellar-ownable = { workspace = true }
stellar-ownable-macro = { workspace = true }
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
